New in SVN (will be 0.12)
-------------------------

* Integrated pdfbuilder sphinx extension (more work needed)
* Kerning support for true type fonts (thanks to wordaxe!), added
  to the docs, added convenience stylesheet.
* Fixed Issue 151 and behaviour on Issue 116, about images too large
  for available space / the full frame height.
* Fixed problem in admonition titles.
* Fixed section names in headers/footers: FIRST section on the page
  is used, not LAST.
* Fixed Issue 145: padding of literal blocks was broken.
* Fixed bug: paragraphs with ids should have the matching anchors
* Fixed bug: internal references were not linked correctly
* Fixed Issue 144: PDF TOC had wrong page numbers in some cases
* More sphinx compatibility
* New table styles code, also make class directive work for tables
* Fixed Issue 140: html-like markup in titles was kept in the PDF TOC
* Fixed Issue 138: Redid figure styling. Also fixed bugs in BoxedContainer
* Fixed Issue 137: bugs in escaping characters in interpreted roles
* Make it work (in a slightly degraded mode) without PIL, as
  long as you are only using JPGs or have PythonMagick installed.
  This is good for OS X, where "installing PIL is a PITA"
* Fixed issue 134: entities were replaced in interpreted roles 
  (not needed)
* Support for aafigure (http://launchpad.net/aafigure)
* Spacers support units
* TOC styles now configurable in stylesheet

New in 0.11
-----------

* Degrade more gracefully when one or more wordaxe hyphenators are
  broken (currently DWC is the broken one)
* Fixed issue 132: in some cases, with user-defined fontAlias, bold and
  italic would get confused (getting italic instead of bold in inline
  markup, for instance).
* New stylesheet no-compact-lists to make lists... less compact
* SVG images now handle % as a width unit correctly.
* Implemented issue 127: support images in PDF format. Right now they 
  are rasterized, so it's not ideal. Perhaps something better will come up
  later.