@@ -1432,7 +1432,6 @@ To use it in your existing sphinx project you need to do the following:
 
     # A colon-separated list of folders to search for fonts. Example:
     # pdf_font_path=['/usr/share/fonts', '/usr/share/texmf-dist/fonts/']
-    #pdf_font_path= ['/usr/share/fonts', '/usr/share/texmf-dist/fonts/']
 
     # Language to be used for hyphenation support
     #pdf_language="en_EN"
