@@ -1,5 +1,12 @@
+This is a regular paragraph
+
+
 1. This is a literal block. If it looks badly misaligned, runs off margins, etc, isue 152 is not fixed::
 
+        This is the literal block.
+
+* This is a bullet list, and this is another literal block::
+    
         This is the literal block.
 
 ::
